--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(medb)
+project(naivedb)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 
@@ -7,12 +7,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 set(SOURCE_FILES
         src/mmap.cpp
         src/mmap_posix.cpp
+        src/file.cpp
         )
 
 set(TEST_FILES
         test/test_mmap.cpp)
 
-add_library(medb ${SOURCE_FILES})
+add_library(naivedb ${SOURCE_FILES})
 
 
 find_package(GTest)
@@ -20,7 +21,7 @@ if (GTEST_FOUND)
     #enable_testing()
     include_directories(${GTEST_INCLUDE_DIRS} src /usr/include)
     add_executable(unittest ${TEST_FILES})
-    target_link_libraries(unittest ${GTEST_BOTH_LIBRARIES} medb pthread)
+    target_link_libraries(unittest ${GTEST_BOTH_LIBRARIES} naivedb pthread)
     #add_test(alltests unittest)
 
     cmake_policy(PUSH)
