Add test and fix bugs for storage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ set(SOURCE_FILES
         )
 
 set(TEST_FILES
-        test/test_mmap.cpp)
+        test/test_mmap.cpp
+        test/test_storage.cpp
+        )
 
 add_library(naivedb ${SOURCE_FILES})
 
