Tests for B+ node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCE_FILES
 set(TEST_FILES
         test/test_mmap.cpp
         test/test_storage.cpp
+        test/test_bplus.cpp
         )
 
 add_library(naivedb ${SOURCE_FILES})
