--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 set(SOURCE_FILES
         src/mmap.cpp
         src/mmap_posix.cpp
+        src/mmap_windows.cpp
         src/datafile.cpp
         src/dbstore.cpp
         src/file.cpp
@@ -15,7 +16,7 @@ set(SOURCE_FILES
         src/bplus.cpp
         src/lrumap.cpp
         src/database.cpp
-        )
+        src/platform.h)
 
 set(TEST_FILES
         test/test_mmap.cpp
