Tests on Windows

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,11 @@ configuration:
   - Debug
 
 before_build:
+- appveyor DownloadFile http://googletest.googlecode.com/files/gtest-1.7.0.zip -FileName gtest-1.7.0.zip
+- 7z x gtest-1.7.0.zip > NUL
+- cmake -DBUILD_SHARED_LIBS=ON gtest-1.7.0
+- cmake --build . --config Release
+
 - ps: |
     Write-Output "Configuration: $env:CONFIGURATION"
     Write-Output "Platform: $env:PLATFORM"
@@ -51,4 +56,4 @@ build_script:
         throw "Exec: $ErrorMessage"
     }
 test_script:
-- ps: |
+- .\unittest
