No benchmark when debug

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,5 +57,7 @@ test_script:
     if ($LastExitCode -ne 0) {
           throw "Exec: $ErrorMessage"
     }
-    .\db_benchmark.exe
-    .\db_benchmark2.exe
+    if ($env:CONFIGURATION -eq "Release") {
+      .\db_benchmark.exe
+      .\db_benchmark2.exe
+    }
